Added the nation to the results page

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,7 +1,8 @@
 <h1> Results </h1>
+<h2> <%= @nation %> </h2>
 
-<h3> Total Members: (need count of results here) <%=  %> </h3>
+<h3> Total Members: <%=  %> </h3>
 
 <!-- <%  %>
-<%=  %>
+<%=  %> @total_results
 <%  %> -->
